--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -9,6 +9,10 @@ on:
   pull_request:
     branches: [ dev ]
 
+defaults:
+  run:
+    working-directory: Backend
+    
 jobs:
   Test-school-finder:
     name: Test School Finder Backend Code
@@ -25,8 +29,6 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - working-directory: Backend
-
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
