--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -8,16 +8,15 @@ on:
     branches: [ dev ]
   pull_request:
     branches: [ dev ]
-
-defaults:
-  run:
-    working-directory: Backend
     
 jobs:
   Test-school-finder:
     name: Test School Finder Backend Code
     runs-on: ubuntu-latest
-
+    
+    env:
+      working-directory: ./Backend
+    
     strategy:
       matrix:
         node-version: [10.x, 12.x, 14.x, 15.x]
@@ -29,6 +28,7 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
+    - working-directory: ${{env.working-directory}}
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
