--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -25,8 +25,13 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
+    - name: Deploy
+      uses: s0/git-publish-subdir-action@develop
+      env:
+          REPO: self
+          BRANCH: dev
+          FOLDER: Backend
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
-    - working-directory: ./Backend
 
