--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -24,13 +24,12 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - name: Deploy
-      uses: s0/git-publish-subdir-action@develop
-      env:
-          REPO: self
-          BRANCH: dev
-          FOLDER: Backend
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    - name: Install dependencies
+      working-directory: ./Backend
+      run: |
+        npm install
+        npm ci
+        npm run build --if-present
+        npm test
+
 
